--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
       <div class="bg-white border border-[#e5e7eb] p-6 rounded-2xl shadow-lg hover:-translate-y-1 transition">
         <h4 class="text-xl font-semibold mb-2">Monitoring & Alerts Setup</h4>
         <p class="mb-2">Set up Prometheus, Grafana, and Slack alerts to keep your systems healthy.</p>
-        <p class="font-bold text-[#5b8df6]">$250</p>
+        <p class="font-bold text-[#5b8df6]">£250</p>
       </div>
       <div class="bg-white border border-[#e5e7eb] p-6 rounded-2xl shadow-lg hover:-translate-y-1 transition">
         <h4 class="text-xl font-semibold mb-2">CI/CD Pipeline</h4>
         <p class="mb-2">Automated deployments with GitHub Actions, GitLab CI, or Jenkins tailored to your stack.</p>
-        <p class="font-bold text-[#5b8df6]">$300</p>
+        <p class="font-bold text-[#5b8df6]">£300</p>
       </div>
       <div class="bg-white border border-[#e5e7eb] p-6 rounded-2xl shadow-lg hover:-translate-y-1 transition">
         <h4 class="text-xl font-semibold mb-2">Cloud Infrastructure Review</h4>
         <p class="mb-2">Audit and improve AWS or GCP infrastructure for cost, security, and reliability.</p>
-        <p class="font-bold text-[#5b8df6]">$500</p>
+        <p class="font-bold text-[#5b8df6]">£500</p>
       </div>
     </div>
   </section>
