--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
     </div>
   </nav> -->
 
-  <nav class="fixed w-full top-0 left-0 bg-white shadow-md px-6 py-4 flex justify-between items-center z-50">
+  <nav class="fixed w-full top-0 left-0 bg-white shadow-md px-8 py-4 flex justify-between items-center z-50">
     <a href="#" class="flex items-center space-x-2">
       <img src="logo.png" alt="BuiltByWorthy Logo" class="h-8 w-8">
       <span class="text-[#5b8df6] font-bold text-xl">BuiltByWorthy</span>
     </a>
-    <div class="md:hidden">
+    <div class="hidden md:flex space-x-6 text-sm font-semibold">
       <button id="menu-toggle" class="text-[var(--vibrant-purple)] focus:outline-none">
         <!-- Hamburger icon -->
         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -48,7 +48,7 @@
         </svg>
       </button>
     </div>
-    <div id="nav-links" class="hidden md:flex space-x-6 text-sm font-semibold">
+    <div id="nav-links" class="md:hidden hidden px-6 pt-20 pb-4 space-y-4 text-sm font-semibold">
       <a href="#services" class="text-[#5b8df6] font-semibold">Services</a>
       <a href="#portfolio" class="text-[#5b8df6] font-semibold">Portfolio</a>
       <a href="#contact" class="text-[#5b8df6] font-semibold">Contact</a>
