--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BuiltByWorthy | Reliable DevOps Services</title>
-  <link rel="icon" href="logo.png" type="image/png"> <!-- Favicon added -->
+  <link rel="icon" href="logo.png" type="image/png">
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="scripts/toggleMenu.js" defer></script>
+  <script>
+    // Toggle mobile navigation menu visibility
+    document.addEventListener('DOMContentLoaded', () => {
+      const toggle = document.getElementById('menu-toggle');
+      const menu = document.getElementById('mobile-menu');
+      toggle.addEventListener('click', () => {
+        menu.classList.toggle('hidden');
+      });
+    });
+  </script>
   <style>
     :root {
       --pale-pink: #f9e4f0;
@@ -21,56 +30,47 @@
 </head>
 
 <body class="font-[\'DM Sans\'] bg-white text-[#0f0f11] pt-16">
-<!--   <nav class="fixed w-full top-0 left-0 bg-white shadow-md px-8 py-4 flex justify-between items-center z-50">
-    <a href="#" class="flex items-center space-x-2">
-      <img src="logo.png" alt="BuiltByWorthy Logo" class="h-8 w-8">
-      <span class="text-[#5b8df6] font-bold text-xl">BuiltByWorthy</span>
-    </a>
-    <div class="flex items-center space-x-6">
-      <a href="#services" class="text-[#5b8df6] font-semibold">Services</a>
-      <a href="#portfolio" class="text-[#5b8df6] font-semibold">Portfolio</a>
-      <a href="#contact" class="text-[#5b8df6] font-semibold">Contact</a>
-      <a href="mailto:your.email@example.com?subject=Discovery%20Call%20Request" class="bg-[#f9e4f0] text-[#0f0f11] px-4 py-2 rounded-full font-semibold hover:bg-[#fce5f1] transition">Free Discovery Call</a>
-    </div>
-  </nav> -->
-
+  <!-- Navigation -->
   <nav class="fixed w-full top-0 left-0 bg-white shadow-md px-8 py-4 flex justify-between items-center z-50">
+    <!-- Logo -->
     <a href="#" class="flex items-center space-x-2">
       <img src="logo.png" alt="BuiltByWorthy Logo" class="h-8 w-8">
       <span class="text-[#5b8df6] font-bold text-xl">BuiltByWorthy</span>
     </a>
-    <div class="hidden md:flex space-x-6 text-sm font-semibold">
-      <button id="menu-toggle" class="text-[var(--vibrant-purple)] focus:outline-none">
-        <!-- Hamburger icon -->
-        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            d="M4 6h16M4 12h16M4 18h16"></path>
-        </svg>
-      </button>
-    </div>
-    <div id="nav-links" class="md:hidden hidden px-6 pt-20 pb-4 space-y-4 text-sm font-semibold">
+    
+    <!-- Desktop Menu -->
+    <div class="hidden md:flex items-center space-x-6 text-sm font-semibold">
       <a href="#services" class="text-[#5b8df6] font-semibold">Services</a>
       <a href="#portfolio" class="text-[#5b8df6] font-semibold">Portfolio</a>
       <a href="#contact" class="text-[#5b8df6] font-semibold">Contact</a>
       <a href="mailto:your.email@example.com?subject=Discovery%20Call%20Request" class="bg-[#f9e4f0] text-[#0f0f11] px-4 py-2 rounded-full font-semibold hover:bg-[#fce5f1] transition">Free Discovery Call</a>
     </div>
+
+    <!-- Hamburger Button for Mobile -->
+    <button id="menu-toggle" class="md:hidden text-[#5b8df6] focus:outline-none">
+      <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M4 6h16M4 12h16M4 18h16"></path>
+      </svg>
+    </button>
   </nav>
-  
-  <!-- Mobile Menu -->
-  <div id="mobile-menu" class="md:hidden hidden px-6 pt-20 pb-4 space-y-4 text-sm font-semibold">
-    <a href="#services" class="text-[#5b8df6] font-semibold">Services</a>
-      <a href="#portfolio" class="text-[#5b8df6] font-semibold">Portfolio</a>
-      <a href="#contact" class="text-[#5b8df6] font-semibold">Contact</a>
-      <a href="mailto:your.email@example.com?subject=Discovery%20Call%20Request" class="bg-[#f9e4f0] text-[#0f0f11] px-4 py-2 rounded-full font-semibold hover:bg-[#fce5f1] transition">Free Discovery Call</a>
+
+  <!-- Mobile Navigation Menu -->
+  <div id="mobile-menu" class="md:hidden hidden px-8 pt-20 pb-4 space-y-4 text-sm font-semibold bg-white shadow-md z-40">
+    <a href="#services" class="block text-[#5b8df6]">Services</a>
+    <a href="#portfolio" class="block text-[#5b8df6]">Portfolio</a>
+    <a href="#contact" class="block text-[#5b8df6]">Contact</a>
+    <a href="mailto:your.email@example.com?subject=Discovery%20Call%20Request" class="block text-center bg-[#f9e4f0] text-[#0f0f11] px-4 py-2 rounded-full font-semibold hover:bg-[#fce5f1] transition">Free Discovery Call</a>
   </div>
 
-
+  <!-- Hero Section -->
   <section class="text-center bg-gradient-to-br from-[#5b8df6] to-[#7a6ff0] text-white py-32 px-4">
     <h1 class="text-4xl md:text-5xl font-bold mb-4">Site Reliability for Startups</h1>
     <p class="text-lg md:text-xl mb-6">Modern DevOps solutions to help your product scale reliably.</p>
     <a href="#services" class="bg-[#f9e4f0] text-[#0f0f11] px-6 py-3 rounded-full font-semibold hover:bg-white transition">Explore Services</a>
   </section>
 
+  <!-- Services Section -->
   <section id="services" class="py-20 px-6 max-w-6xl mx-auto">
     <h2 class="text-[#5b8df6] text-3xl font-bold text-center mb-12">My Services</h2>
     <div class="grid gap-8 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
@@ -92,14 +92,16 @@
     </div>
   </section>
 
+  <!-- About Section -->
   <section class="bg-[#f9e4f0] py-20 text-center px-4">
     <h2 class="text-[#5b8df6] text-3xl font-bold mb-4">About Me</h2>
     <p class="max-w-3xl mx-auto text-[#0f0f11]">I’m an aspiring SRE offering practical, hands-on DevOps services. I help startups and developers build automated, resilient infrastructure using best practices.</p>
   </section>
 
+  <!-- Portfolio Section -->
   <section id="portfolio" class="py-20 px-6 max-w-6xl mx-auto">
     <h2 class="text-[#5b8df6] text-3xl font-bold text-center mb-12">Portfolio</h2>
-    <div class="grid gap-8 grid-cols-1 md:grid-cols-2">
+    <div class="grid gap-8 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
       <div class="bg-white border border-[#e5e7eb] p-6 rounded-2xl shadow-lg hover:-translate-y-1 transition">
         <h5 class="text-xl font-semibold mb-2">Startup Monitoring Stack</h5>
         <p>Implemented a full-stack observability solution using Prometheus, Grafana, Loki, and Alertmanager.</p>
@@ -108,15 +110,21 @@
         <h5 class="text-xl font-semibold mb-2">CI/CD for SaaS Platform</h5>
         <p>Built a CI/CD pipeline on GitHub Actions for containerized microservices with zero-downtime deployments.</p>
       </div>
+      <div class="bg-white border border-[#e5e7eb] p-6 rounded-2xl shadow-lg hover:-translate-y-1 transition">
+        <h5 class="text-xl font-semibold mb-2">Infrastructure as Code Setup</h5>
+        <p>Provisioned and managed infrastructure on AWS using Terraform and modular templates to enable rapid and reliable deployments.</p>
+      </div>
     </div>
   </section>
 
+  <!-- CTA Section -->
   <section class="text-center bg-gradient-to-r from-[#7a6ff0] to-[#5b8df6] text-white py-20 px-4">
     <h2 class="text-3xl font-bold mb-4">Free Discovery Call</h2>
     <p class="text-lg mb-6 max-w-2xl mx-auto text-white/90">Let’s chat about your infrastructure goals. Book a 20-minute call to explore how I can help your startup succeed.</p>
     <a href="mailto:your.email@example.com?subject=Discovery%20Call%20Request" class="bg-[#f9e4f0] text-[#0f0f11] px-6 py-3 rounded-full font-semibold hover:bg-white transition">Book Now</a>
   </section>
 
+  <!-- Contact Form -->
   <section id="contact" class="bg-[#f9e4f0] text-center py-20 px-4">
     <h2 class="text-[#5b8df6] text-3xl font-bold mb-6">Contact Me</h2>
     <form class="max-w-xl mx-auto space-y-4">
@@ -127,6 +135,7 @@
     </form>
   </section>
 
+  <!-- Footer -->
   <footer class="text-center py-6 bg-white text-[#5b8df6]">
     <p>&copy; 2025 BuiltByWorthy. Designed with purpose and creativity.</p>
   </footer>
